sjengida/g0/l_knight_mobility
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/l_knight_mobility/src/leval.c:533:12: error: use of undeclared identifier 'knight_o_2'
if ( board[knight_o_2[i] + square] == 13 ) 
           ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/l_knight_mobility/src/obj/leval.o] Error 1
